# ocr_annortator

./: .gitignore  README.md  app.py  llm_processor.py  ocr_annortator.md  ocr_engines.py  pyproject.toml  setup_gsheet_auth.py  tesseract_trainer.py
backend/: api.py  app.py  app_user.py  ocr_core.py  ocr_engines.py  ocr_processor.py  pyproject.toml  tesseract_training.py
frontend-agents/: index.html
frontend-vue/: index.html  script.js  style.css  training_monitor.html
output/: efb34e38-f137-4d4e-b0bd-4dedf671031b.json
